--- a/package.json
+++ b/package.json
@@ -1,20 +1,47 @@
 {
-  "name": "vue",
+  "name": "elevenlabs-ui-vue",
+  "version": "0.0.1",
   "private": true,
+  "packageManager": "pnpm@10.24.0",
+  "engines": {
+    "node": ">=20"
+  },
   "scripts": {
     "build": "turbo run build",
+    "test": "turbo run test",
     "dev": "turbo run dev",
-    "lint": "turbo run lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
-    "check-types": "turbo run check-types"
+    "dev:www": "pnpm --filter www dev",
+    "build:www": "pnpm --filter www build",
+    "preview:www": "pnpm --filter www preview",
+    "dev:registry": "pnpm --filter registry dev",
+    "build:registry": "pnpm --filter registry build",
+    "prepare": "pnpm simple-git-hooks",
+    "lint": "eslint . && turbo run lint",
+    "lint:fix": "eslint . --fix",
+    "bumpp": "bumpp package.json packages/*/package.json apps/*/package.json"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^6.5.1",
+    "@commitlint/cli": "^20.2.0",
+    "@commitlint/config-conventional": "^20.2.0",
+    "bumpp": "^10.3.2",
+    "eslint": "^9.39.1",
+    "lint-staged": "^16.2.7",
     "prettier": "^3.6.2",
+    "simple-git-hooks": "^2.13.1",
     "turbo": "^2.6.3",
     "typescript": "5.9.2"
   },
-  "packageManager": "pnpm@9.0.0",
-  "engines": {
-    "node": ">=18"
+  "simple-git-hooks": {
+    "pre-commit": "pnpm lint-staged",
+    "commit-msg": "pnpm commitlint --edit ${1}"
+  },
+  "lint-staged": {
+    "*": "eslint --fix"
+  },
+  "commitlint": {
+    "extends": [
+      "@commitlint/config-conventional"
+    ]
   }
 }
