--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "elevenlabs-ui-vue",
-  "version": "0.0.1",
+  "version": "0.0.0",
   "private": true,
-  "packageManager": "pnpm@10.24.0",
+  "packageManager": "pnpm@10.25.0",
   "engines": {
     "node": ">=20"
   },
@@ -30,7 +30,7 @@
     "prettier": "^3.6.2",
     "simple-git-hooks": "^2.13.1",
     "turbo": "^2.6.3",
-    "typescript": "5.9.2"
+    "typescript": "^5.9.3"
   },
   "simple-git-hooks": {
     "pre-commit": "pnpm lint-staged",
