--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -1,15 +1,11 @@
 {
   "name": "@repo/elements",
-  "version": "1.0.0",
-  "packageManager": "pnpm@10.24.0",
-  "description": "Vue elements library",
-  "author": "",
-  "license": "ISC",
-  "keywords": [],
+  "version": "0.0.0",
+  "private": true,
+  "description": "",
   "exports": {
     "./*": "./src/*/index.ts"
   },
-  "main": "./src/index.ts",
   "dependencies": {
     "@repo/shadcn-vue": "workspace:*",
     "vue": "^3.5.25"
