chore: add dropdown-menu component from shadcn-vue

--- a/packages/shadcn-vue/package.json
+++ b/packages/shadcn-vue/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@tailwindcss/vite": "^4.1.17",
+    "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.556.0",
