--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -18,5 +18,8 @@
     "tailwindcss": "^4.1.17",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "tw-animate-css": "^1.4.0"
   }
 }
