--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -8,6 +8,9 @@
   },
   "dependencies": {
     "@repo/shadcn-vue": "workspace:*",
+    "@vueuse/core": "^14.1.0",
+    "lucide-vue-next": "^0.556.0",
+    "reka-ui": "^2.6.1",
     "vue": "^3.5.25"
   },
   "devDependencies": {
