--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -10,6 +10,7 @@
     "@repo/shadcn-vue": "workspace:*",
     "@vueuse/core": "^14.1.0",
     "lucide-vue-next": "^0.556.0",
+    "motion-v": "^1.7.4",
     "reka-ui": "^2.6.1",
     "vue": "^3.5.25"
   },
