--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -12,6 +12,7 @@
     "lucide-vue-next": "^0.556.0",
     "motion-v": "^1.7.4",
     "reka-ui": "^2.6.1",
+    "shiki": "^3.20.0",
     "streamdown-vue": "^1.0.29",
     "vue": "^3.5.25"
   },
