--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -7,6 +7,7 @@
     "./*": "./src/*/index.ts"
   },
   "dependencies": {
+    "@elevenlabs/client": "^0.12.2",
     "@repo/shadcn-vue": "workspace:*",
     "@vueuse/core": "^14.1.0",
     "lucide-vue-next": "^0.556.0",
