--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -13,7 +13,6 @@
     "deploy": "pnpm build && npx wrangler --cwd .output/ deploy"
   },
   "dependencies": {
-    "@dnd-kit/abstract": "^0.1.21",
     "@nuxt/content": "^3.9.0",
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/image": "^2.0.0",
@@ -21,18 +20,10 @@
     "@repo/examples": "workspace:*",
     "@tabler/icons-vue": "^3.36.0",
     "@tailwindcss/vite": "^4.1.17",
-    "@tanstack/vue-form": "^1.27.3",
     "@tanstack/vue-table": "^8.21.3",
-    "@unhead/vue": "^2.0.19",
-    "@unovis/ts": "^1.6.2",
-    "@unovis/vue": "^1.6.2",
-    "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^14.1.0",
-    "chrono-node": "^2.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "date-fns": "^4.1.0",
-    "dnd-kit-vue": "^0.0.2",
     "lucide-vue-next": "^0.556.0",
     "nuxt": "^4.2.1",
     "nuxt-og-image": "^5.1.13",
@@ -41,21 +32,16 @@
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
     "tw-animate-css": "^1.4.0",
-    "unstorage": "^1.17.3",
     "vaul-vue": "^0.4.1",
-    "vee-validate": "^4.15.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
-    "vue-sonner": "^2.0.9",
-    "zod": "^3.25.76"
+    "vue-sonner": "^2.0.9"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^4.0.0",
     "nuxt-shiki": "^0.3.1",
-    "oxc-parser": "^0.102.0",
     "pathe": "^2.0.3",
     "prettier": "^3.7.4",
-    "rimraf": "^6.1.2",
     "shiki": "^3.20.0",
     "vue-tsc": "^3.1.8",
     "wrangler": "^4.54.0"
