--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@elevenlabs/client": "^0.12.2",
+    "@elevenlabs/elevenlabs-js": "^2.28.0",
     "@repo/shadcn-vue": "workspace:*",
     "@vueuse/core": "^14.1.0",
     "lucide-vue-next": "^0.556.0",
