--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -10,10 +10,14 @@
     "@elevenlabs/client": "^0.12.2",
     "@elevenlabs/elevenlabs-js": "^2.28.0",
     "@repo/shadcn-vue": "workspace:*",
+    "@tresjs/cientos": "^5.2.1",
+    "@tresjs/core": "^5.2.1",
     "@vueuse/core": "^14.1.0",
     "lucide-vue-next": "^0.556.0",
     "motion-v": "^1.7.4",
     "reka-ui": "^2.6.1",
+    "three": "^0.182.0",
+    "three-custom-shader-material": "^6.4.0",
     "vue": "^3.5.25",
     "vue-stream-markdown": "^0.3.2"
   },
