--- a/packages/elements/tsconfig.json
+++ b/packages/elements/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "target": "esnext",
     "jsx": "preserve",
     "jsxFactory": "h",
     "lib": ["ES2020", "DOM"],
