--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -21,8 +21,8 @@
     "@tabler/icons-vue": "^3.36.0",
     "@tailwindcss/vite": "^4.1.17",
     "@tanstack/vue-table": "^8.21.3",
-    "@tresjs/cientos": "^5.2.1",
     "@tresjs/core": "^5.2.1",
+    "@vitejs/plugin-vue": "^6.0.2",
     "@vueuse/core": "^14.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -33,8 +33,6 @@
     "shadcn-vue": "^2.4.3",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.17",
-    "three": "^0.182.0",
-    "three-custom-shader-material": "^6.4.0",
     "tw-animate-css": "^1.4.0",
     "vaul-vue": "^0.4.1",
     "vue": "^3.5.25",
