--- a/packages/examples/package.json
+++ b/packages/examples/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@elevenlabs/elevenlabs-js": "^2.28.0",
     "@repo/elements": "workspace:*",
-    "vue": "^3.5.25"
+    "vue": "^3.5.25",
+    "vue-sonner": "^2.0.9"
   }
 }
