--- a/packages/elements/package.json
+++ b/packages/elements/package.json
@@ -18,6 +18,7 @@
     "reka-ui": "^2.6.1",
     "three": "^0.182.0",
     "vue": "^3.5.25",
+    "vue-stick-to-bottom": "^0.1.0",
     "vue-stream-markdown": "^0.3.3"
   },
   "devDependencies": {
