chore: externalize agent ID to environment variable and update tsconfig for vite client types

--- a/packages/examples/tsconfig.json
+++ b/packages/examples/tsconfig.json
@@ -8,7 +8,8 @@
       "@repo/*": ["../*"],
       "@/components/*": ["../shadcn-vue/components/*"],
       "@/lib/*": ["../shadcn-vue/lib/*"]
-    }
+    },
+    "types": ["vite/client"]
   },
   "include": ["**/*.ts", "**/*.vue"],
   "exclude": ["node_modules"]
