--- a/apps/www/package.json
+++ b/apps/www/package.json
@@ -16,6 +16,7 @@
     "@nuxt/content": "^3.9.0",
     "@nuxt/fonts": "^0.12.1",
     "@nuxt/image": "^2.0.0",
+    "@repo/blocks": "workspace:*",
     "@repo/elements": "workspace:*",
     "@repo/examples": "workspace:*",
     "@tabler/icons-vue": "^3.36.0",
@@ -38,7 +39,8 @@
     "vaul-vue": "^0.4.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
-    "vue-sonner": "^2.0.9"
+    "vue-sonner": "^2.0.9",
+    "zod": "^3.25.76"
   },
   "devDependencies": {
     "@nuxtjs/color-mode": "^4.0.0",
