--- a/packages/blocks/package.json
+++ b/packages/blocks/package.json
@@ -4,5 +4,14 @@
   "private": true,
   "exports": {
     "./*": "./src/*"
+  },
+  "dependencies": {
+    "@elevenlabs/client": "^0.12.2",
+    "@repo/elements": "workspace:*",
+    "@repo/shadcn-vue": "workspace:*",
+    "@vueuse/core": "^14.1.0",
+    "lucide-vue-next": "^0.556.0",
+    "motion-v": "^1.7.4",
+    "vue": "^3.5.25"
   }
 }
